<resources>
    <string name="app_name">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testing">Testing</string>
    <string name="list_screen">List Screen</string>
    <string name="task_screen">Task Screen</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="continu">continue</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="not_member">Not a member?</string>
    <string name="already_member">Already member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="enter_list_title">Enter List Title</string>
    <string name="title">title</string>
    <string name="cancel">cancel</string>
</resources>