<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/et_signup_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:layout_below="@id/tv_signup_title"/>

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_below="@id/et_signup_username"/>

        <EditText
            android:id="@+id/et_signup_confirm_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_pass"
            android:layout_below="@id/et_signup_password"/>

        <TextView
            android:id="@+id/tv_signup_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/continu"
            android:layout_below="@id/et_signup_confirm_pass"/>

        <TextView
            android:id="@+id/tv_signup_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:text="@string/already_member"
            android:layout_below="@id/tv_signup_continue"/>

        <TextView
            android:id="@+id/tv_signup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:layout_below="@id/tv_signup_continue"
            android:layout_toRightOf="@id/tv_signup_member"/>

    </RelativeLayout>

</RelativeLayout>