<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_list_title"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/et_add_list"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:ems="15"
            android:maxHeight="100dp"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:hint="@string/title"
            android:layout_below="@id/tv_add_list"
            android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_add_list"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_add_list_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/continu"/>

        <TextView
            android:id="@+id/tv_add_list_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:layout_toRightOf="@id/tv_add_list_continue"/>

    </RelativeLayout>


</RelativeLayout>